# NN-on-ESP32

./: CMakeLists.txt  README.md  bin_to_csv.py  launch.json  model_params.csv  model_params.pkl  pkl_to_csv.py  preparedata.py  task.json  test_model  test_model.cpp  train_model.cpp
